--- a/pages/search.css
+++ b/pages/search.css
@@ -24,6 +24,7 @@
     margin-bottom: 20px;
     box-shadow: #000000 2px 2px 3px;
     text-decoration: none;
+    text-align: center;
 }
 
 .result-name{
