--- a/pages/style.css
+++ b/pages/style.css
@@ -34,6 +34,7 @@ header{
     padding: 10px;
     padding-left: 0;
     padding-right: 0;
+    height: 15vh;
 }
 
 header h1 {
@@ -74,7 +75,8 @@ footer a {
     top:0;
     bottom: 0;
     image-rendering: pixelated;
-    height: 100vh;
+    min-height: 72vh;
+    height: fit-content;
     /*border-top: solid 10px #257804;*/
     text-align: left;
 }
@@ -87,7 +89,8 @@ footer a {
     background-size: 12vh;
     margin: 0;
     margin-top: 0;
-    height: 100vh;
+    min-height: 72vh;
+    height: fit-content;
     flex-grow: 1;
     padding: 10px;
 }
